Projects/Project1/GUI/src/GramaticaParser.java
// Generated from Gramatica.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, CREATE=13, DATABASE=14, DATABASES=15, ALTER=16, 
		RENAME=17, DROP=18, TO=19, SHOW=20, USE=21, CONSTRAINT=22, PRIMARY=23, 
		FOREIGN=24, KEY=25, REFERENCES=26, CHECK=27, INT=28, FLOAT=29, DATE=30, 
		CHAR=31, AND=32, OR=33, NOT=34, TABLE=35, TABLES=36, ADD=37, COLUMN=38, 
		COLUMNS=39, SHOWX=40, FROM=41, INSERT=42, SELECT=43, VALUES=44, INTO=45, 
		UPDATE=46, SET=47, WHERE=48, DELETE=49, ORDER=50, BY=51, ASC=52, DESC=53, 
		NULL=54, APOS=55, DIGIT_four=56, DIGIT_two=57, DIGIT=58, NUMX=59, CHARX=60, 
		IDX=61, WORD=62, COMMENT=63, WS=64;
	public static final int
		RULE_literal = 0, RULE_int_literal = 1, RULE_float_literal = 2, RULE_char_literal = 3, 
		RULE_date_literal = 4, RULE_programa = 5, RULE_database = 6, RULE_createDatabase = 7, 
		RULE_alterDatabase = 8, RULE_dropDatabase = 9, RULE_showDatabase = 10, 
		RULE_useDatabase = 11, RULE_tipo = 12, RULE_createTable = 13, RULE_columna = 14, 
		RULE_constraint = 15, RULE_primaryKey = 16, RULE_foreignKey = 17, RULE_check = 18, 
		RULE_exp = 19, RULE_location = 20, RULE_operacion = 21, RULE_cond = 22, 
		RULE_rel = 23, RULE_notOp = 24, RULE_alterTable = 25, RULE_action = 26, 
		RULE_addColumn = 27, RULE_addConstraint = 28, RULE_dropColumn = 29, RULE_dropConstraint = 30, 
		RULE_dropTable = 31, RULE_showTables = 32, RULE_showColumns = 33, RULE_insertInto = 34, 
		RULE_updateSet = 35, RULE_updateColumas = 36, RULE_cambio = 37, RULE_deleteFrom = 38, 
		RULE_selectFrom = 39, RULE_orden = 40, RULE_colOrder = 41, RULE_cols = 42, 
		RULE_tabs = 43, RULE_rel_op = 44, RULE_cond_op = 45;
	public static final String[] ruleNames = {
		"literal", "int_literal", "float_literal", "char_literal", "date_literal", 
		"programa", "database", "createDatabase", "alterDatabase", "dropDatabase", 
		"showDatabase", "useDatabase", "tipo", "createTable", "columna", "constraint", 
		"primaryKey", "foreignKey", "check", "exp", "location", "operacion", "cond", 
		"rel", "notOp", "alterTable", "action", "addColumn", "addConstraint", 
		"dropColumn", "dropConstraint", "dropTable", "showTables", "showColumns", 
		"insertInto", "updateSet", "updateColumas", "cambio", "deleteFrom", "selectFrom", 
		"orden", "colOrder", "cols", "tabs", "rel_op", "cond_op"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'-'", "'('", "')'", "','", "'='", "'*'", "'<'", "'>'", "'<='", 
		"'>='", "'<>'", null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "'''"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "CREATE", "DATABASE", "DATABASES", "ALTER", "RENAME", "DROP", "TO", 
		"SHOW", "USE", "CONSTRAINT", "PRIMARY", "FOREIGN", "KEY", "REFERENCES", 
		"CHECK", "INT", "FLOAT", "DATE", "CHAR", "AND", "OR", "NOT", "TABLE", 
		"TABLES", "ADD", "COLUMN", "COLUMNS", "SHOWX", "FROM", "INSERT", "SELECT", 
		"VALUES", "INTO", "UPDATE", "SET", "WHERE", "DELETE", "ORDER", "BY", "ASC", 
		"DESC", "NULL", "APOS", "DIGIT_four", "DIGIT_two", "DIGIT", "NUMX", "CHARX", 
		"IDX", "WORD", "COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class LiteralContext extends ParserRuleContext {
		public Int_literalContext int_literal() {
			return getRuleContext(Int_literalContext.class,0);
		}
		public Float_literalContext float_literal() {
			return getRuleContext(Float_literalContext.class,0);
		}
		public Char_literalContext char_literal() {
			return getRuleContext(Char_literalContext.class,0);
		}
		public Date_literalContext date_literal() {
			return getRuleContext(Date_literalContext.class,0);
		}
		public TerminalNode NULL() { return getToken(GramaticaParser.NULL, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitLiteral(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_literal);
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				int_literal();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				float_literal();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				char_literal();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(95);
				date_literal();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(96);
				match(NULL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Int_literalContext extends ParserRuleContext {
		public TerminalNode NUMX() { return getToken(GramaticaParser.NUMX, 0); }
		public TerminalNode DIGIT() { return getToken(GramaticaParser.DIGIT, 0); }
		public TerminalNode DIGIT_four() { return getToken(GramaticaParser.DIGIT_four, 0); }
		public TerminalNode DIGIT_two() { return getToken(GramaticaParser.DIGIT_two, 0); }
		public Int_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_int_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterInt_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitInt_literal(this);
		}
	}

	public final Int_literalContext int_literal() throws RecognitionException {
		Int_literalContext _localctx = new Int_literalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_int_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIGIT_four) | (1L << DIGIT_two) | (1L << DIGIT) | (1L << NUMX))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Float_literalContext extends ParserRuleContext {
		public List<TerminalNode> NUMX() { return getTokens(GramaticaParser.NUMX); }
		public TerminalNode NUMX(int i) {
			return getToken(GramaticaParser.NUMX, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(GramaticaParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(GramaticaParser.DIGIT, i);
		}
		public List<TerminalNode> DIGIT_four() { return getTokens(GramaticaParser.DIGIT_four); }
		public TerminalNode DIGIT_four(int i) {
			return getToken(GramaticaParser.DIGIT_four, i);
		}
		public List<TerminalNode> DIGIT_two() { return getTokens(GramaticaParser.DIGIT_two); }
		public TerminalNode DIGIT_two(int i) {
			return getToken(GramaticaParser.DIGIT_two, i);
		}
		public Float_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_float_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterFloat_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitFloat_literal(this);
		}
	}

	public final Float_literalContext float_literal() throws RecognitionException {
		Float_literalContext _localctx = new Float_literalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_float_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIGIT_four) | (1L << DIGIT_two) | (1L << DIGIT) | (1L << NUMX))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(102);
			match(T__0);
			setState(103);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIGIT_four) | (1L << DIGIT_two) | (1L << DIGIT) | (1L << NUMX))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Char_literalContext extends ParserRuleContext {
		public List<TerminalNode> APOS() { return getTokens(GramaticaParser.APOS); }
		public TerminalNode APOS(int i) {
			return getToken(GramaticaParser.APOS, i);
		}
		public TerminalNode CHARX() { return getToken(GramaticaParser.CHARX, 0); }
		public TerminalNode IDX() { return getToken(GramaticaParser.IDX, 0); }
		public TerminalNode WORD() { return getToken(GramaticaParser.WORD, 0); }
		public TerminalNode NUMX() { return getToken(GramaticaParser.NUMX, 0); }
		public TerminalNode DIGIT() { return getToken(GramaticaParser.DIGIT, 0); }
		public TerminalNode DIGIT_four() { return getToken(GramaticaParser.DIGIT_four, 0); }
		public TerminalNode DIGIT_two() { return getToken(GramaticaParser.DIGIT_two, 0); }
		public Char_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_char_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterChar_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitChar_literal(this);
		}
	}

	public final Char_literalContext char_literal() throws RecognitionException {
		Char_literalContext _localctx = new Char_literalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_char_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(APOS);
			setState(106);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIGIT_four) | (1L << DIGIT_two) | (1L << DIGIT) | (1L << NUMX) | (1L << CHARX) | (1L << IDX) | (1L << WORD))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(107);
			match(APOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Date_literalContext extends ParserRuleContext {
		public List<TerminalNode> APOS() { return getTokens(GramaticaParser.APOS); }
		public TerminalNode APOS(int i) {
			return getToken(GramaticaParser.APOS, i);
		}
		public TerminalNode DIGIT_four() { return getToken(GramaticaParser.DIGIT_four, 0); }
		public List<TerminalNode> DIGIT_two() { return getTokens(GramaticaParser.DIGIT_two); }
		public TerminalNode DIGIT_two(int i) {
			return getToken(GramaticaParser.DIGIT_two, i);
		}
		public Date_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_date_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterDate_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitDate_literal(this);
		}
	}

	public final Date_literalContext date_literal() throws RecognitionException {
		Date_literalContext _localctx = new Date_literalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_date_literal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(APOS);
			setState(110);
			match(DIGIT_four);
			setState(111);
			match(T__1);
			setState(112);
			match(DIGIT_two);
			setState(113);
			match(T__1);
			setState(114);
			match(DIGIT_two);
			setState(115);
			match(APOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramaContext extends ParserRuleContext {
		public List<DatabaseContext> database() {
			return getRuleContexts(DatabaseContext.class);
		}
		public DatabaseContext database(int i) {
			return getRuleContext(DatabaseContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_programa);
		int _la;
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				database();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CREATE) | (1L << ALTER) | (1L << DROP) | (1L << SHOW) | (1L << USE) | (1L << INSERT) | (1L << SELECT) | (1L << UPDATE) | (1L << DELETE))) != 0)) {
					{
					{
					setState(118);
					database();
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatabaseContext extends ParserRuleContext {
		public CreateDatabaseContext createDatabase() {
			return getRuleContext(CreateDatabaseContext.class,0);
		}
		public AlterDatabaseContext alterDatabase() {
			return getRuleContext(AlterDatabaseContext.class,0);
		}
		public DropDatabaseContext dropDatabase() {
			return getRuleContext(DropDatabaseContext.class,0);
		}
		public ShowDatabaseContext showDatabase() {
			return getRuleContext(ShowDatabaseContext.class,0);
		}
		public UseDatabaseContext useDatabase() {
			return getRuleContext(UseDatabaseContext.class,0);
		}
		public CreateTableContext createTable() {
			return getRuleContext(CreateTableContext.class,0);
		}
		public AlterTableContext alterTable() {
			return getRuleContext(AlterTableContext.class,0);
		}
		public DropTableContext dropTable() {
			return getRuleContext(DropTableContext.class,0);
		}
		public ShowTablesContext showTables() {
			return getRuleContext(ShowTablesContext.class,0);
		}
		public ShowColumnsContext showColumns() {
			return getRuleContext(ShowColumnsContext.class,0);
		}
		public InsertIntoContext insertInto() {
			return getRuleContext(InsertIntoContext.class,0);
		}
		public UpdateSetContext updateSet() {
			return getRuleContext(UpdateSetContext.class,0);
		}
		public DeleteFromContext deleteFrom() {
			return getRuleContext(DeleteFromContext.class,0);
		}
		public SelectFromContext selectFrom() {
			return getRuleContext(SelectFromContext.class,0);
		}
		public DatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_database; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitDatabase(this);
		}
	}

	public final DatabaseContext database() throws RecognitionException {
		DatabaseContext _localctx = new DatabaseContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_database);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(126);
				createDatabase();
				}
				break;
			case 2:
				{
				setState(127);
				alterDatabase();
				}
				break;
			case 3:
				{
				setState(128);
				dropDatabase();
				}
				break;
			case 4:
				{
				setState(129);
				showDatabase();
				}
				break;
			case 5:
				{
				setState(130);
				useDatabase();
				}
				break;
			case 6:
				{
				setState(131);
				createTable();
				}
				break;
			case 7:
				{
				setState(132);
				alterTable();
				}
				break;
			case 8:
				{
				setState(133);
				dropTable();
				}
				break;
			case 9:
				{
				setState(134);
				showTables();
				}
				break;
			case 10:
				{
				setState(135);
				showColumns();
				}
				break;
			case 11:
				{
				setState(136);
				insertInto();
				}
				break;
			case 12:
				{
				setState(137);
				updateSet();
				}
				break;
			case 13:
				{
				setState(138);
				deleteFrom();
				}
				break;
			case 14:
				{
				setState(139);
				selectFrom();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateDatabaseContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(GramaticaParser.CREATE, 0); }
		public TerminalNode DATABASE() { return getToken(GramaticaParser.DATABASE, 0); }
		public TerminalNode IDX() { return getToken(GramaticaParser.IDX, 0); }
		public CreateDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterCreateDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitCreateDatabase(this);
		}
	}

	public final CreateDatabaseContext createDatabase() throws RecognitionException {
		CreateDatabaseContext _localctx = new CreateDatabaseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_createDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(CREATE);
			setState(143);
			match(DATABASE);
			setState(144);
			match(IDX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlterDatabaseContext extends ParserRuleContext {
		public TerminalNode ALTER() { return getToken(GramaticaParser.ALTER, 0); }
		public TerminalNode DATABASE() { return getToken(GramaticaParser.DATABASE, 0); }
		public List<TerminalNode> IDX() { return getTokens(GramaticaParser.IDX); }
		public TerminalNode IDX(int i) {
			return getToken(GramaticaParser.IDX, i);
		}
		public TerminalNode RENAME() { return getToken(GramaticaParser.RENAME, 0); }
		public TerminalNode TO() { return getToken(GramaticaParser.TO, 0); }
		public AlterDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alterDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterAlterDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitAlterDatabase(this);
		}
	}

	public final AlterDatabaseContext alterDatabase() throws RecognitionException {
		AlterDatabaseContext _localctx = new AlterDatabaseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_alterDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(ALTER);
			setState(147);
			match(DATABASE);
			setState(148);
			match(IDX);
			setState(149);
			match(RENAME);
			setState(150);
			match(TO);
			setState(151);
			match(IDX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DropDatabaseContext extends ParserRuleContext {
		public TerminalNode DROP() { return getToken(GramaticaParser.DROP, 0); }
		public TerminalNode DATABASE() { return getToken(GramaticaParser.DATABASE, 0); }
		public TerminalNode IDX() { return getToken(GramaticaParser.IDX, 0); }
		public DropDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dropDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterDropDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitDropDatabase(this);
		}
	}

	public final DropDatabaseContext dropDatabase() throws RecognitionException {
		DropDatabaseContext _localctx = new DropDatabaseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_dropDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(DROP);
			setState(154);
			match(DATABASE);
			setState(155);
			match(IDX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShowDatabaseContext extends ParserRuleContext {
		public TerminalNode SHOW() { return getToken(GramaticaParser.SHOW, 0); }
		public TerminalNode DATABASES() { return getToken(GramaticaParser.DATABASES, 0); }
		public ShowDatabaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_showDatabase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterShowDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitShowDatabase(this);
		}
	}

	public final ShowDatabaseContext showDatabase() throws RecognitionException {
		ShowDatabaseContext _localctx = new ShowDatabaseContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_showDatabase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(SHOW);
			setState(158);
			match(DATABASES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
